// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete button renders default correctly 1`] = `
<span
  data-for="table-tooltip"
  data-tip="Delete Rows"
>
  <button
    className="btn-table"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-trash-alt"
    />
  </button>
</span>
`;

exports[`Delete button renders enabled when number of rows selected > 0 1`] = `
<span
  data-for="table-tooltip"
  data-tip="Delete Rows"
>
  <button
    className="btn-table"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-trash-alt"
    />
  </button>
</span>
`;
